--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /obj
+/.vs/NewOutboundEmailApp/v16/Server/sqlite3
+/.vs/NewOutboundEmailApp/v16/.suo
